
accountdir = ${GNC_ACCOUNTS_DIR}/C

account_DATA = \
  acctchrt_brokerage.systecash-xea \
  acctchrt_business.systecash-xea \
  acctchrt_carloan.systecash-xea \
  acctchrt_cdmoneymkt.systecash-xea \
  acctchrt_checkbook.systecash-xea \
  acctchrt_childcare.systecash-xea \
  acctchrt_common.systecash-xea \
  acctchrt_eduloan.systecash-xea \
  acctchrt_fixedassets.systecash-xea \
  acctchrt_homeloan.systecash-xea \
  acctchrt_homeown.systecash-xea \
  acctchrt_otherloan.systecash-xea \
  acctchrt_renter.systecash-xea \
  acctchrt_retiremt.systecash-xea \
  acctchrt_spouseinc.systecash-xea \
  acctchrt_spouseretire.systecash-xea

EXTRA_DIST = \
  ${account_DATA} \
  acctchrt_full.systecash-xea 
