
accountdir = $(GNC_ACCOUNTS_DIR)/de_AT

dist_account_DATA = \
 acctchrt_auto.systecash-xea \
 acctchrt_autoloan.systecash-xea \
 acctchrt_brokerage.systecash-xea \
 acctchrt_business.systecash-xea \
 acctchrt_common.systecash-xea \
 acctchrt_houseown.systecash-xea \
 acctchrt_investment.systecash-xea \
 acctchrt_kids.systecash-xea
