
accountdir = ${GNC_ACCOUNTS_DIR}/de_CH

account_DATA = \
  acctchrt_brokerage.systecash-xea \
  acctchrt_common.systecash-xea \
  acctchrt_kids.systecash-xea \
  acctchrt_otherasset.systecash-xea \
  acctchrt_otherloan.systecash-xea \
  acctchrt_chkmu.systecash-xea 

EXTRA_DIST = \
  ${account_DATA}
