
accountdir = ${GNC_ACCOUNTS_DIR}/de_DE

account_DATA = \
  acctchrt_auto.systecash-xea \
  acctchrt_autoloan.systecash-xea \
  acctchrt_brokerage.systecash-xea \
  acctchrt_common.systecash-xea \
  acctchrt_houseown.systecash-xea \
  acctchrt_investment.systecash-xea \
  acctchrt_kids.systecash-xea \
  acctchrt_otherasset.systecash-xea \
  acctchrt_otherloan.systecash-xea \
  acctchrt_studium.systecash-xea \
  acctchrt_skr03.systecash-xea \
  acctchrt_wohnungsw.systecash-xea \
  acctchrt_skr04.systecash-xea \
  acctchrt_skr49.systecash-xea


EXTRA_DIST = \
  ${account_DATA} \
  acctchrt_full.systecash-xea 
