accountdir = ${GNC_ACCOUNTS_DIR}/fr_CA

account_DATA = \
 acctchrt_actifsfixes.systecash-xea \
 acctchrt_automobile.systecash-xea \
 acctchrt_basecommune.systecash-xea \
 acctchrt_cdmarchemon.systecash-xea \
 acctchrt_chequier.systecash-xea \
 acctchrt_conjointretraite.systecash-xea \
 acctchrt_conjointrev.systecash-xea \
 acctchrt_courtage.systecash-xea \
 acctchrt_etudeemprunt.systecash-xea \
 acctchrt_garderie.systecash-xea \
 acctchrt_locataire.systecash-xea \
 acctchrt_proprietaire.systecash-xea \
 acctchrt_retraite.systecash-xea \
 acctchrt_revenus.systecash-xea

EXTRA_DIST = \
  ${account_DATA}
