
accountdir = ${GNC_ACCOUNTS_DIR}/tr_TR

account_DATA = \
 acctchrt_brokerage.systecash-xea \
 acctchrt_carloan.systecash-xea \
 acctchrt_cdmoneymkt.systecash-xea \
 acctchrt_checkbook.systecash-xea \
 acctchrt_common.systecash-xea \
 acctchrt_fixedassets.systecash-xea \
 acctchrt_homeloan.systecash-xea \
 acctchrt_TEKDUZ.systecash-xea

EXTRA_DIST = \
  ${account_DATA}
